src/test/resources/rules/fail/SystemErrUsage.java
package rules.fail;

public class SystemErrUsage {
    public void method() {
        System.err.println("This is an error message!");
    }
}